# package-installer

./: .gitignore  Dockerfile  README.md  build.py  package_installer.py  pyproject.toml
windows/: packages.json  smart-winget-install.ps1
windows/templates/: install_script_template.ps1
